--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
     <div class="jumbotron">
-            <h1>Rohit's Blog</h1>
+            <h1>Nano Blog</h1>
             <p>Small blog app written using python flask and mongodb</p>
             <p> {% if not session['email'] : %}
                 <a href="/login" class="btn btn-lg btn-primary"  role="button">Login </a>
